--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -14,7 +14,7 @@
     margin-top: 40px;
     font-weight: 800;
     font-size: 35px;
-    /* color: blueviolet; */
+    /* color: #15153a; */
     color:#383874;
     letter-spacing: 0.2rem;
   }
@@ -27,7 +27,7 @@
     display: grid;
     grid-template-columns: 30% 60%;
     gap: 10%;
-    color: blueviolet;
+    color: #15153a;
     font-size: 20px;
   }
   .mainCont > div {
@@ -46,15 +46,15 @@
     text-align: right;
     width: 100%;
     margin: auto;
-    border: 2px solid blueviolet;
+    border: 2px solid #ef2be2;
     background-color: rgb(194, 195, 201);
     border-radius: 10px;
   }
   .profilePic:hover{
     color:#080823;
-    box-shadow: 1px 1px 17px 5px blueviolet;
-  -webkit-box-shadow: 1px 1px 17px 5px blueviolet;
-  -moz-box-shadow: 1px 1px 17px 5px rgb(116, 54, 174);
+    box-shadow: 1px 1px 17px 5px #b61cac;
+  -webkit-box-shadow: 1px 1px 17px 5px #8d168f;
+  -moz-box-shadow: 1px 1px 17px 5px rgb(45, 12, 52);
   }
   @media only screen and (max-width: 1024px) {
     .rootCont {
@@ -77,11 +77,36 @@
   .downloadBtn{
     width: 5rem;
     margin: 0 0 0 1rem;
+    /* color: #327fc7; */
   }
 
   .downloadBtn:hover{
     color:#aa1baa;
-    box-shadow: 1px 1px 17px 5px blueviolet;
-  -webkit-box-shadow: 1px 1px 17px 5px blueviolet;
-  -moz-box-shadow: 1px 1px 17px 5px rgb(116, 54, 174);
+    box-shadow: 1px 1px 17px 5px #ef2be2;
+  -webkit-box-shadow: 1px 1px 17px 5px #9f1a9f;
+  -moz-box-shadow: 1px 1px 17px 5px rgb(65, 18, 67);
   }
+
+@media screen and (max-width: 950px){
+    
+   .resumeDownload{
+    text-align: center;
+    align-self: center;
+    margin: 0;
+
+   }
+}
+
+@media screen and (max-width: 768px){
+   
+}
+@media screen and (max-width: 468px){
+  .resumeDownload{
+    text-align: center;
+    align-self: center;
+    margin: 0;
+
+   }
+    
+   
+}
