--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -26,28 +26,32 @@ video {
 .hero-container {
     /* background: url('../images/fromthesky.jpeg') center center/cover no-repeat; */
     height: 100vh;
-    width: 100%;
-    color: blueviolet;
+    width: 100%; 
+    padding-top: 7rem;
+    color: #15153a;
+    background-color: #2f2f4f;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
     object-fit: contain;
+    /* row-gap: 2rem; */
 }
 
 .hero-container > h1 {
-    /* color: blueviolet; */
-    font-size: 80px;
-    margin-top: -100px;
+    /* color: #15153a; */
+    font-size: 70px;
+    
+    /* margin-top: -100px; */
     font-weight: 700;
     /* background: #0e8dbc; */
     color: white;
     text-shadow: 0 1px 0 #ccc,
                  0 2px 0 #c9c9c9,
                  0 3px 0 #bbb,
-                 0 4px 0 #b9b9b9,
-                 0 5px 0 #aaa,
+                 /* 0 4px 0 #b9b9b9,
+                 0 5px 0 #aaa, */
                  0 6px 1px rgba(0,0,0,.1),
                  0 0 5px rgba(0,0,0,.1),
                  0 1px 3px rgba(0,0,0,.3),
@@ -59,12 +63,34 @@ video {
                  
 }
 
-.hero-container > p {
-    margin-top: 8px;
-    color: blueviolet;
-    font-size: 36px;
+.hero-container > h3 {
+    margin-top: -8rem;
+    color: #15153a;
+    font-size: 38px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     /* font-family: 'Baloo Tamma', cursive; */
+    color: #fff;
+    letter-spacing: 0.2rem;
+    text-shadow: 0 1px 0 #ccc,
+                 0 2px 0 #c9c9c9,
+                 0 3px 0 #bbb,
+               /*0 4px 0 #b9b9b9,
+                 0 5px 0 #aaa,  */
+                 0 6px 1px rgba(0,0,0,.1),
+                 0 0 5px rgba(0,0,0,.1),
+                 0 1px 3px rgba(0,0,0,.3),
+                 0 3px 5px rgba(0,0,0,.2),
+                 0 5px 10px rgba(0,0,0,.25),
+                 0 10px 10px rgba(0,0,0,.2),
+                 0 20px 20px rgba(0,0,0,.15);
+}
+
+/* .hero-container > h2 {
+    margin-top: 8px;
+    color: #15153a;
+    font-size: 36px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Baloo Tamma', cursive;
     color: #fff;
     letter-spacing: 0.2rem;
     text-shadow: 0 1px 0 #ccc,
@@ -79,7 +105,33 @@ video {
                  0 5px 10px rgba(0,0,0,.25),
                  0 10px 10px rgba(0,0,0,.2),
                  0 20px 20px rgba(0,0,0,.15);
-}
+} */
+
+
+.hero-container > p {
+    margin-top: 8px;
+    color: #15153a;
+    font-size: 25px;
+    width: 60%;
+
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* font-family: 'Baloo Tamma', cursive; */
+    color: #fff;
+    letter-spacing: 0.2rem;
+    /* text-shadow: 0 1px 0 #ccc,
+                 0 2px 0 #c9c9c9,
+                 0 3px 0 #bbb,
+                 0 4px 0 #b9b9b9,
+                 0 5px 0 #aaa,
+                 0 6px 1px rgba(0,0,0,.1),
+                 0 0 5px rgba(0,0,0,.1),
+                 0 1px 3px rgba(0,0,0,.3),
+                 0 3px 5px rgba(0,0,0,.2),
+                 0 5px 10px rgba(0,0,0,.25),
+                 0 10px 10px rgba(0,0,0,.2),
+                 0 20px 20px rgba(0,0,0,.15); */
+} 
+
 
 .hero-btns {
     margin-top: 32px;
@@ -87,17 +139,21 @@ video {
     
 }
 
+
 .hero-btns .btn {
     margin: 6px;
 }
+
+
 /* ***************************** */
+
 .hero-btns {
     /* width: 220px;
     height: 50px; */
     border: none;
     outline: none;
     /* color: #fff; */
-    background: blueviolet;
+    background: #15153a;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -156,30 +212,117 @@ video {
     margin-left: 4px;
 }
 
-@media screen and (max-width: 960px){
-    .hero-container > h1 {
-        font-size: 70px;
-        margin-top: -150px;
-    }
+@media screen and (max-width: 950px){
+    
+    .hero-container {
+        padding:6rem 0 2rem 0;
+        height: 80vh;
+    
+       } 
+       .hero-container > h3 {
+           font-size:40px;
+           width : 100%;
+           /* margin:-3rem 0 3rem 0; */
+       }
+       
+       .hero-container > h1 {
+           font-size: 60px;
+           margin:1rem 0 2rem 0;
+           width: 100%;
+       }
+   
+       .hero-container > p {
+           margin-top: 8px;
+           font-size: 30px;
+           width: 90%;
+          
+       }
+       .btn-mobile {
+           display: block;
+           margin-right: 22px;
+           text-decoration: none;
+           margin-top: 2rem;
+       }
+      
+   
+       #home {
+           width: 100%;
+       }
+   
+       .btn {
+           width: 100%;
+           font-size:30px;
+           /* border: 2px solid red; */
+           
+      }
 }
 
 @media screen and (max-width: 768px){
-    
+    .hero-container {
+     padding: 5rem;
+     height: 120vh;
+    }
     
     .hero-container > h1 {
-        font-size: 50px;
-        margin-top: -100px;
+        font-size: 35px;
+        /* margin-top: -100px; */
+        width: 100%;
+    }
+    .hero-container > h3 {
+        font-size: 25px;
         width: 100%;
     }
 
     .hero-container > p {
-        font-size: 30px;        
+        margin-top: 8px;
+        font-size: 18px;
+        width: 100%;
+       
     }
-
     .btn-mobile {
         display: block;
         margin-right: 22px;
         text-decoration: none;
+    }
+
+    #home {
+        width: 100%;
+    }
+
+    .btn {
+        width: 100%;
+   }
+}
+@media screen and (max-width: 468px){
+    
+    .hero-container {
+     padding:6rem 0 2rem 0;
+     height: 80vh;
+ 
+    } 
+    .hero-container > h3 {
+        font-size:25px;
+        width : 100%;
+        /* margin:-3rem 0 3rem 0; */
+    }
+    
+    .hero-container > h1 {
+        font-size: 30px;
+        margin:1rem 0 2rem 0;
+        width: 100%;
+    }
+
+    .hero-container > p {
+        margin-top: 8px;
+        font-size: 20px;
+        width: 90%;
+       
+    }
+    .btn-mobile {
+        display: block;
+        margin-right: 22px;
+        text-decoration: none;
+        margin-top: 2rem;
     }
 
     #home {
